# ros2_ws

./: .gitignore  Readme.md
src/M3Pro_robot_description/: CMakeLists.txt  package.xml
src/M3Pro_robot_description/launch/: display.launch.py
src/M3Pro_robot_description/rviz/: M3Pro.rviz
src/M3Pro_robot_description/urdf/: M3Pro.urdf.xacro  M3Pro_original.urdf  M3Pro_robot_controllers.xacro  M3Pro_robot_gazebo_materials.xacro  M3Pro_robot_main.xacro  M3Pro_robot_sensors.xacro
src/M3Pro_robot_description/worlds/: M3pro_world.sdf
src/aws_robomaker_hospital_world/: CMakeLists.txt  package.xml
src/aws_robomaker_hospital_world/fuel_models/ElderLadyPatient/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/ElderMalePatient/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/FemaleVisitor/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/FemaleVisitorSit/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/MalePatientBed/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/MaleVisitorOnPhone/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/MaleVisitorSit/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/PatientFSit/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/Scrubs/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/TrolleyBedPatient/: model.sdf
src/aws_robomaker_hospital_world/fuel_models/VisitorKidSit/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_hospital_curtain_closed_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_hospital_curtain_half_open_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_hospital_curtain_open_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_hospital_floor_01_ceiling/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_hospital_floor_01_floor/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_residential_Carpet_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_residential_PortraitA_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_residential_PortraitD_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_residential_PortraitD_02/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_residential_PortraitE_01/: model.sdf
src/aws_robomaker_hospital_world/models/aws_robomaker_residential_PortraitE_02/: model.sdf
src/aws_robomaker_hospital_world/worlds/: hospital.sdf
src/aws_robomaker_small_house_world/: CMakeLists.txt  package.xml
src/aws_robomaker_small_house_world/worlds/: small_house.sdf
(+57 files in other folders)
