<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aws_robomaker_hospital_world</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker Hospital World adapted for Gazebo Fortress (Ignition Gazebo).
    Provides a hospital environment with multiple rooms, furniture and medical equipment.
  </description>
  <license>Apache-2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
